// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryResultsDataSource query returns column headers with no data when QueryResults API returns empty array 1`] = `
[
  {
    "fields": [
      {
        "name": "Result ID",
        "type": "string",
        "values": [],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query returns data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "Result ID",
        "type": "string",
        "values": [
          "000007fb-aa87-4ab9-9757-6568e7893c33",
        ],
      },
      {
        "name": "Test program name",
        "type": "string",
        "values": [
          "My Program Name",
        ],
      },
      {
        "name": "Total time (s)",
        "type": "string",
        "values": [
          29.9,
        ],
      },
      {
        "name": "Keywords",
        "type": "string",
        "values": [
          [
            "keyword1",
            "keyword2",
          ],
        ],
      },
      {
        "name": "workspace",
        "type": "string",
        "values": [
          "Default workspace",
        ],
      },
    ],
    "name": "A",
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query returns empty data for invalid query 1`] = `
[
  {
    "fields": [],
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query returns total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "A",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`QueryResultsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "Result ID",
    "type": "string",
    "values": [
      "000007fb-aa87-4ab9-9757-6568e7893c33",
    ],
  },
  {
    "name": "Test program name",
    "type": "string",
    "values": [
      "My Program Name",
    ],
  },
  {
    "name": "Total time (s)",
    "type": "string",
    "values": [
      29.9,
    ],
  },
  {
    "name": "Keywords",
    "type": "string",
    "values": [
      [
        "keyword1",
        "keyword2",
      ],
    ],
  },
  {
    "name": "workspace",
    "type": "string",
    "values": [
      "Default workspace",
    ],
  },
]
`;

exports[`QueryResultsDataSource query should return the workspace ID if the workspace cache is empty 1`] = `
[
  {
    "name": "workspace",
    "type": "string",
    "values": [
      "1",
    ],
  },
]
`;

exports[`QueryResultsDataSource query should return the workspace ID if the workspace is not found in the cache 1`] = `
[
  {
    "name": "workspace",
    "type": "string",
    "values": [
      "1",
    ],
  },
]
`;

exports[`QueryResultsDataSource queryResults returns data when there are valid queries 1`] = `
{
  "results": [
    {
      "id": "000007fb-aa87-4ab9-9757-6568e7893c33",
      "keywords": [
        "keyword1",
        "keyword2",
      ],
      "programName": "My Program Name",
      "totalTimeInSeconds": 29.9,
      "workspace": "1",
    },
  ],
  "totalCount": 1,
}
`;
